resolve mixed content

--- a/skin/javascript/roulette.html
+++ b/skin/javascript/roulette.html
@@ -34,8 +34,8 @@
             </div>
         </div>
     </div>
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="../../js/jQueryRotateCompressed.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="https://9gleling.github.io/js/js/jQueryRotateCompressed.js"></script>
 <script type="text/javascript">
     var rouletteEvt = (function(){            
         var myChance = 5;
