--- a/skin/javascript/roulette.html
+++ b/skin/javascript/roulette.html
@@ -1,14 +1,15 @@
-
+<!DOCTYPE html>
 <html>
     <head>
-    <title>룰렛</title>
-    <style>
-        body {margin:0;padding:0;}
-        .wrapper {width:100%;}
-        .wrapper .roulette_area img { display: block; margin: 0px auto; }
-        .wrapper .roulette_area .roulette_pointer img { position: relative;top:45px;left:9px;z-index:1 }
-        .wrapper .roulette_area button { position: relative;display:block;margin:0px auto;font-size:20px;padding:20px;z-index:1}
-    </style>
+        <meta charset="utf-8">
+        <title>룰렛</title>
+        <style>
+            body {margin:0;padding:0;}
+            .wrapper {width:100%;}
+            .wrapper .roulette_area img { display: block; margin: 0px auto; }
+            .wrapper .roulette_area .roulette_pointer img { position: relative;top:45px;left:9px;z-index:1 }
+            .wrapper .roulette_area button { position: relative;display:block;margin:0px auto;font-size:20px;padding:20px;z-index:1}
+        </style>
     </head>
     
     <body>
