--- a/skin/javascript/roulette.html
+++ b/skin/javascript/roulette.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>룰렛</title>
-        <style>
-            body {margin:0;padding:0;}
-            .wrapper {width:100%;}
-            .wrapper .roulette_area img { display: block; margin: 0px auto; }
-            .wrapper .roulette_area .roulette_pointer img { position: relative;top:45px;left:9px;z-index:1 }
-            .wrapper .roulette_area button { position: relative;display:block;margin:0px auto;font-size:20px;padding:20px;z-index:1}
-        </style>
-    </head>
-    
-    <body>
+
+<div id="header">
+</div>
+<style>
+    body {margin:0;padding:0;}
+    .wrapper {width:100%;}
+    .wrapper .roulette_area img { display: block; margin: 0px auto; }
+    .wrapper .roulette_area .roulette_pointer img { position: relative;top:45px;left:9px;z-index:1 }
+    .wrapper .roulette_area button { position: relative;display:block;margin:0px auto;font-size:20px;padding:20px;z-index:1}
+</style>
+    <!-- Sidebar -->
+    <div class="bg-light border-right" id="sidebar-wrapper">
+       
+    </div>
     <div class="wrapper">
         <div class="roulette_area">
             <div id="roulette">   
@@ -37,6 +36,8 @@
     </div>
 <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="https://9gleling.github.io/js/js/jQueryRotateCompressed.js"></script>
+<script type="text/javascript" src="https://9gleling.github.io/js/js/common.js"></script>
+
 <script type="text/javascript">
     var rouletteEvt = (function(){            
         var myChance = 5;
