--- a/skin/javascript/roulette.html
+++ b/skin/javascript/roulette.html
@@ -1,5 +1,7 @@
 
-<div id="header">
+<html>
+    <head>
+    <title>룰렛</title>
     <style>
         body {margin:0;padding:0;}
         .wrapper {width:100%;}
@@ -7,12 +9,9 @@
         .wrapper .roulette_area .roulette_pointer img { position: relative;top:45px;left:9px;z-index:1 }
         .wrapper .roulette_area button { position: relative;display:block;margin:0px auto;font-size:20px;padding:20px;z-index:1}
     </style>
-</div>
-
-    <!-- Sidebar -->
-    <div class="bg-light border-right" id="sidebar-wrapper">
-       
-    </div>
+    </head>
+    
+    <body>
     <div class="wrapper">
         <div class="roulette_area">
             <div id="roulette">   
