--- a/skin/index.html
+++ b/skin/index.html
@@ -54,8 +54,8 @@
             <!-- /#wrapper -->
 
   <!-- Bootstrap core JavaScript -->
-<script src="../bootstrap/vendor/jquery/jquery.min.js"></script>
-<script src="../bootstrap/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../../bootstrap/vendor/jquery/jquery.min.js"></script>
+<script src="../../bootstrap/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="https://9gleling.github.io/js/js/common.js"></script>
 <!-- Menu Toggle Script -->
 <script>
