--- a/skin/javascript/roulette/roulette.html
+++ b/skin/javascript/roulette/roulette.html
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="../../../bootstrap/vendor/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="https://9gleling.github.io/js/js/jQueryRotateCompressed.js"></script>
 <script type="text/javascript" src="https://9gleling.github.io/js/js/common.js"></script>
 
