--- a/skin/javascript/roulette/roulette.html
+++ b/skin/javascript/roulette/roulette.html
@@ -16,10 +16,10 @@
         <div class="roulette_area">
             <div id="roulette">   
                 <div class="roulette_pointer">
-                    <img src="../../img/img_pointer.png">
+                    <img src="../../../img/img_pointer.png">
                 </div>
                 <div class="spin">
-                    <img src="../../img/img_roulette.png">
+                    <img src="../../../img/img_roulette.png">
                 </div>
                 <!-- <div class="btn_start">
                     <img src="../../img/img_start.png">
